--- a/wiki/encyclopedia/templates/encyclopedia/index.html
+++ b/wiki/encyclopedia/templates/encyclopedia/index.html
@@ -9,7 +9,7 @@
 
     <ul>
         {% for entry in entries %}
-            <li>{{ entry }}</li>
+            <li><a href="{% url 'CSS'%}">{{ entry }}</a></li>
         {% endfor %}
     </ul>
 
