--- a/wiki/newpage/templates/newpage/index.html
+++ b/wiki/newpage/templates/newpage/index.html
@@ -6,7 +6,14 @@
 
 {% block body %}
 <h1>Create a New Encyclopedia Page</h1>
-<h2>Enter a Title and Entry</h2>
+<form action="{% url 'newpage:index' %}" method="post">
+    {% csrf_token %}
+    <table style="width:100%";>
+        {{ form.as_table }}
+        </table>
+    <input type="submit">
+</form>
+
 
 
 {% endblock %}
