newpage creates and writes the markdown file

--- a/wiki/encyclopedia/templates/encyclopedia/entry.html
+++ b/wiki/encyclopedia/templates/encyclopedia/entry.html
@@ -1,11 +1,10 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    Encyclopedia
+    Encyclopedia Entry {{ title }}
 {% endblock %}
 
 {% block body %}
-    <h1>All Pages</h1>
 
 
         {{ text|safe }}
