--- a/wiki/newpage/templates/newpage/index.html
+++ b/wiki/newpage/templates/newpage/index.html
@@ -8,9 +8,7 @@
 <h1>Create a New Encyclopedia Page</h1>
 <form action="{% url 'newpage:index' %}" method="post">
     {% csrf_token %}
-    <table style="width:100%";>
-        {{ form.as_table }}
-        </table>
+        {{ form.as_p }}
     <input type="submit">
 </form>
 
