added random page feature

--- a/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -29,7 +29,7 @@
                     <a href="{% url 'newpage:index'%}">Create New Page</a>
                 </div>
                 <div>
-                    Random Page
+                    <a href="{% url 'randompage' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
